--- a/ceppp_patient_partenaire/views/res_partner.xml
+++ b/ceppp_patient_partenaire/views/res_partner.xml
@@ -1,22 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
-
         <record id="view_ceppp_res_partner_filter" model="ir.ui.view">
             <field name="name">res.partner.patient</field>
             <field name="model">res.partner</field>
-            <field name="inherit_id" ref="base.view_res_partner_filter"/>
+            <field name="inherit_id" ref="base.view_res_partner_filter" />
             <field name="arch" type="xml">
                 <xpath expr="//filter[@name='type_company']" position="after">
-                    <separator/>
-                    <filter string="Patients" name="patient" domain="[('ceppp_entity','=','patient')]"/>
-                    <filter string="Recruteurs" name="recruteur" domain="[('ceppp_entity','=','recruteur')]"/>
-                    <filter string="Administrateur" name="administrateur"
-                            domain="[('ceppp_entity','=','administrateur')]"/>
-                    <filter string="Centre de recrutement" name="affiliation"
-                            domain="[('ceppp_entity','=','affiliation')]"/>
-                    <filter string="Affiliation Groupe" name="affiliation_group"
-                            context="{'group_by': 'ceppp_entity'}"/>
+                    <separator />
+                    <filter string="Patients" name="patient" domain="[('ceppp_entity','=','patient')]" />
+                    <filter string="Recruteurs" name="recruteur" domain="[('ceppp_entity','=','recruteur')]" />
+                    <filter
+                        string="Administrateur"
+                        name="administrateur"
+                        domain="[('ceppp_entity','=','administrateur')]"
+                    />
+                    <filter
+                        string="Centre de recrutement"
+                        name="affiliation"
+                        domain="[('ceppp_entity','=','affiliation')]"
+                    />
+                    <filter
+                        string="Affiliation Groupe"
+                        name="affiliation_group"
+                        context="{'group_by': 'ceppp_entity'}"
+                    />
                 </xpath>
             </field>
         </record>
@@ -24,16 +32,15 @@
         <record id="view_ceppp_partner_form" model="ir.ui.view">
             <field name="name">res.partner.form</field>
             <field name="model">res.partner</field>
-            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="inherit_id" ref="base.view_partner_form" />
             <field name="arch" type="xml">
                 <xpath expr="//page[@name='sales_purchases']" position="attributes">
                     <attribute name="attrs">{'invisible': 1}</attribute>
                 </xpath>
                 <xpath expr="//field[@name='type']" position="before">
-                    <field name="ceppp_entity"/>
+                    <field name="ceppp_entity" />
                 </xpath>
             </field>
         </record>
-
     </data>
 </odoo>
