--- a/ceppp_patient_partenaire/views/ceppp_langue.xml
+++ b/ceppp_patient_partenaire/views/ceppp_langue.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-
     <record id="ceppp_langue_view_form" model="ir.ui.view">
         <field name="name">ceppp_langue_form</field>
         <field name="model">ceppp.langue</field>
@@ -64,8 +63,7 @@
         <field name="name">ceppp_langue_search</field>
         <field name="model">ceppp.langue</field>
         <field name="arch" type="xml">
-            <search string="Ceppp langue">
-            </search>
+            <search string="Ceppp langue" />
         </field>
     </record>
 
@@ -85,5 +83,4 @@
         res_model="ceppp.langue"
         view_mode="kanban,tree,pivot,graph,form"
     />
-
 </odoo>
