--- a/ceppp_patient_partenaire/views/ceppp_maladie.xml
+++ b/ceppp_patient_partenaire/views/ceppp_maladie.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-
     <record id="ceppp_maladie_view_form" model="ir.ui.view">
         <field name="name">ceppp_maladie_form</field>
         <field name="model">ceppp.maladie</field>
@@ -8,10 +7,10 @@
             <form string="Titre">
                 <sheet>
                     <group>
-                        <field name="nom"/>
+                        <field name="nom" />
                     </group>
                     <group>
-                        <field name="chapitre_maladie_id"/>
+                        <field name="chapitre_maladie_id" />
                     </group>
                 </sheet>
             </form>
@@ -23,8 +22,8 @@
         <field name="model">ceppp.maladie</field>
         <field name="arch" type="xml">
             <graph string="Ceppp maladie">
-                <field name="nom" type="row"/>
-                <field name="chapitre_maladie_id" type="row"/>
+                <field name="nom" type="row" />
+                <field name="chapitre_maladie_id" type="row" />
             </graph>
         </field>
     </record>
@@ -34,8 +33,8 @@
         <field name="model">ceppp.maladie</field>
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
-                <field name="nom"/>
-                <field name="chapitre_maladie_id"/>
+                <field name="nom" />
+                <field name="chapitre_maladie_id" />
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
@@ -43,12 +42,12 @@
                                 <ul>
                                     <li class="mb4">
                                         <strong>
-                                            <field name="nom"/>
+                                            <field name="nom" />
                                         </strong>
                                     </li>
                                     <li class="mb4">
                                         <strong>
-                                            <field name="chapitre_maladie_id"/>
+                                            <field name="chapitre_maladie_id" />
                                         </strong>
                                     </li>
                                 </ul>
@@ -65,8 +64,8 @@
         <field name="model">ceppp.maladie</field>
         <field name="arch" type="xml">
             <pivot string="Ceppp maladie">
-                <field name="nom" type="row"/>
-                <field name="chapitre_maladie_id" type="row"/>
+                <field name="nom" type="row" />
+                <field name="chapitre_maladie_id" type="row" />
             </pivot>
         </field>
     </record>
@@ -76,14 +75,17 @@
         <field name="model">ceppp.maladie</field>
         <field name="arch" type="xml">
             <search string="Ceppp maladie">
-                <filter domain="[('nom','!=',False)]" name="nom" string="Nom"/>
+                <filter domain="[('nom','!=',False)]" name="nom" string="Nom" />
                 <filter
-                        domain="[('chapitre_maladie_id','!=',False)]"
-                        name="chapitre_maladie_id"
-                        string="Chapitre maladie"
+                    domain="[('chapitre_maladie_id','!=',False)]"
+                    name="chapitre_maladie_id"
+                    string="Chapitre maladie"
                 />
-                <filter name="chapitre_maladie_id_group" string="Chapitre maladie Group"
-                        context="{'group_by': 'chapitre_maladie_id'}"/>
+                <filter
+                    name="chapitre_maladie_id_group"
+                    string="Chapitre maladie Group"
+                    context="{'group_by': 'chapitre_maladie_id'}"
+                />
             </search>
         </field>
     </record>
@@ -93,17 +95,16 @@
         <field name="model">ceppp.maladie</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="nom"/>
-                <field name="chapitre_maladie_id"/>
+                <field name="nom" />
+                <field name="chapitre_maladie_id" />
             </tree>
         </field>
     </record>
 
     <act_window
-            id="ceppp_maladie_maladie_action_window"
-            name="Maladie"
-            res_model="ceppp.maladie"
-            view_mode="kanban,tree,pivot,graph,form"
+        id="ceppp_maladie_maladie_action_window"
+        name="Maladie"
+        res_model="ceppp.maladie"
+        view_mode="kanban,tree,pivot,graph,form"
     />
-
 </odoo>
