--- a/ceppp_patient_partenaire/views/ceppp_relation_proche.xml
+++ b/ceppp_patient_partenaire/views/ceppp_relation_proche.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="ceppp_maladie_soi_meme_view_form" model="ir.ui.view">
-        <field name="name">ceppp_maladie_soi_meme_form</field>
-        <field name="model">ceppp.maladie_soi_meme</field>
+    <record id="ceppp_relation_proche_view_form" model="ir.ui.view">
+        <field name="name">ceppp_relation_proche_form</field>
+        <field name="model">ceppp.relation_proche</field>
         <field name="arch" type="xml">
             <form string="Titre">
                 <sheet>
@@ -14,19 +14,19 @@
         </field>
     </record>
 
-    <record id="ceppp_maladie_soi_meme_view_graph" model="ir.ui.view">
-        <field name="name">ceppp_maladie_soi_meme_graph</field>
-        <field name="model">ceppp.maladie_soi_meme</field>
+    <record id="ceppp_relation_proche_view_graph" model="ir.ui.view">
+        <field name="name">ceppp_relation_proche_graph</field>
+        <field name="model">ceppp.relation_proche</field>
         <field name="arch" type="xml">
-            <graph string="Ceppp maladie soi meme">
+            <graph string="Ceppp relation proche">
                 <field name="name" type="row" />
             </graph>
         </field>
     </record>
 
-    <record id="ceppp_maladie_soi_meme_view_kanban" model="ir.ui.view">
-        <field name="name">ceppp_maladie_soi_meme_kanban</field>
-        <field name="model">ceppp.maladie_soi_meme</field>
+    <record id="ceppp_relation_proche_view_kanban" model="ir.ui.view">
+        <field name="name">ceppp_relation_proche_kanban</field>
+        <field name="model">ceppp.relation_proche</field>
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
                 <field name="name" />
@@ -49,29 +49,29 @@
         </field>
     </record>
 
-    <record id="ceppp_maladie_soi_meme_view_pivot" model="ir.ui.view">
-        <field name="name">ceppp_maladie_soi_meme_pivot</field>
-        <field name="model">ceppp.maladie_soi_meme</field>
+    <record id="ceppp_relation_proche_view_pivot" model="ir.ui.view">
+        <field name="name">ceppp_relation_proche_pivot</field>
+        <field name="model">ceppp.relation_proche</field>
         <field name="arch" type="xml">
-            <pivot string="Ceppp maladie soi meme">
+            <pivot string="Ceppp relation proche">
                 <field name="name" type="row" />
             </pivot>
         </field>
     </record>
 
-    <record id="ceppp_maladie_soi_meme_view_search" model="ir.ui.view">
-        <field name="name">ceppp_maladie_soi_meme_search</field>
-        <field name="model">ceppp.maladie_soi_meme</field>
+    <record id="ceppp_relation_proche_view_search" model="ir.ui.view">
+        <field name="name">ceppp_relation_proche_search</field>
+        <field name="model">ceppp.relation_proche</field>
         <field name="arch" type="xml">
-            <search string="Ceppp maladie soi meme">
+            <search string="Ceppp relation proche">
                 <filter domain="[('name','!=',False)]" name="name" string="Name" />
             </search>
         </field>
     </record>
 
-    <record id="ceppp_maladie_soi_meme_view_tree" model="ir.ui.view">
-        <field name="name">ceppp_maladie_soi_meme_tree</field>
-        <field name="model">ceppp.maladie_soi_meme</field>
+    <record id="ceppp_relation_proche_view_tree" model="ir.ui.view">
+        <field name="name">ceppp_relation_proche_tree</field>
+        <field name="model">ceppp.relation_proche</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="name" />
@@ -80,9 +80,9 @@
     </record>
 
     <act_window
-        id="ceppp_maladie_soi_meme_maladie_soi_meme_action_window"
-        name="Maladie soi meme"
-        res_model="ceppp.maladie_soi_meme"
+        id="ceppp_relation_proche_relation_proche_action_window"
+        name="Relation proche"
+        res_model="ceppp.relation_proche"
         view_mode="kanban,tree,pivot,graph,form"
     />
 </odoo>
