--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -25,6 +25,8 @@
                     <group>
                         <!--<field name="uuid" readonly="1" attrs="{'invisible':[('uuid','=',False)]}"/>-->
                         <field name="user_is_admin" invisible="1" />
+                        <field name="occupation_is_autre" invisible="1" />
+                        <field name="langue_is_autre" invisible="1" />
                         <field
                             name="patient_partner_id"
                             domain="[('ceppp_entity','=','patient')]"
@@ -45,23 +47,35 @@
                                     <field name="genre" />
                                     <field name="genre_autre" attrs="{'invisible':[('genre','!=','autre')]}" />
                                     <field name="heritage_culturel" />
-                                    <field name="langue_parle_ecrit" widget="many2many_tags" />
+                                    <field
+                                        name="langue_parle_ecrit"
+                                        widget="many2many_tags"
+                                        options="{'no_create': True, 'no_create_edit': True}"
+                                    />
                                     <field
                                         name="langue_parle_ecrit_autre"
-                                        attrs="{'invisible':[('langue_parle_ecrit','!=','autre')]}"
+                                        attrs="{'invisible':[('langue_is_autre','=',False)]}"
                                     />
                                 </group>
                                 <group name="preference" string="Préférence">
-                                    <field name="mode_communication_privilegie" widget="many2many_tags" />
+                                    <field
+                                        name="mode_communication_privilegie"
+                                        widget="many2many_tags"
+                                        options="{'no_create': True, 'no_create_edit': True}"
+                                    />
                                     <field name="patient_actif" />
                                 </group>
                             </group>
                             <group>
                                 <group name="Occupation" string="Autre">
-                                    <field name="occupation" widget="many2many_tags" />
+                                    <field
+                                        name="occupation"
+                                        widget="many2many_tags"
+                                        options="{'no_create': True, 'no_create_edit': True}"
+                                    />
                                     <field
                                         name="occupation_autre"
-                                        attrs="{'invisible':[('occupation','!=','autre')]}"
+                                        attrs="{'invisible':[('occupation_is_autre','=',False)]}"
                                     />
                                 </group>
                             </group>
