--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -156,17 +156,33 @@
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
                 <field name="name" />
+                <field name="id" />
+                <field name="write_date" />
                 <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
-                            <div class="oe_kanban_details">
-                                <ul>
-                                    <li class="mb4">
-                                        <strong>
-                                            <field name="name" />
+                            <div class="row mb4">
+                                <div class="col-8">
+                                    <span>
+                                        <strong class="o_kanban_record_title">
+                                            <t t-esc="record.name.value" />
                                         </strong>
-                                    </li>
-                                </ul>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <i class="fa fa-clock-o" role="img" aria-label="Date" title="Date" />
+                                    <t t-esc="record.write_date.value" />
+                                </div>
+                                <div class="col-6">
+                                    <img
+                                        t-att-src="kanban_image('ceppp.recruteur', 'image_small', record.id.raw_value)"
+                                        t-att-title="record.value"
+                                        t-att-alt="record.value"
+                                        class="oe_kanban_avatar float-right"
+                                    />
+                                </div>
                             </div>
                         </div>
                     </t>
